modify api spec
